docs: 更新项目文档
- troubleshooting: 添加 Java 25 + Lombok 兼容性问题记录
- setup: 更新后端启动命令 (单一 service 模块)
- README: 添加 backend-refactoring.md 索引
- backend-refactoring: 更新 Phase 4 验证状态